extends Node

@onready var sounds: Node = $sounds
@onready var navigation: Node = $navigation
@onready var screen: Node = $screen
@onready var loadGameFiles: Node = $LoadGameFiles
@onready var splashScreen: Control = $SplashScreen
@onready var save_settings: Node = $saveSettings
@onready var apply_init_settings: Node = $applyInitSettings
